--- a/partials/home.html
+++ b/partials/home.html
@@ -3,7 +3,7 @@
         <h2 class="section_title">The Value of money</h2>
         <div class="money_value_inner">
             <figure>
-                <img src="../img/Image2.jpg" alt="" />
+                <img src="img/Image2.jpg" alt="" />
             </figure>
             <div class="money_detail">
                 <p>
@@ -32,7 +32,7 @@
         <h2 class="section_title">GMO Food</h2>
         <div class="money_value_inner">
             <figure>
-                <img src="../img/Image3.jpg" alt="" />
+                <img src="img/Image3.jpg" alt="" />
             </figure>
             <div class="money_detail">
                 <p>
@@ -58,7 +58,7 @@
         <h2 class="section_title">The view of world in 2100</h2>
         <div class="money_value_inner">
             <figure>
-                <img src="../img/Image4.jpg" alt="" />
+                <img src="img/Image4.jpg" alt="" />
             </figure>
             <div class="money_detail">
                 <p>
