--- a/partials/home.html
+++ b/partials/home.html
@@ -3,7 +3,7 @@
         <h2 class="section_title">The Value of money</h2>
         <div class="money_value_inner">
             <figure>
-                <img src="img/Image2.jpg" alt="" />
+                <img src="../img/Image2.jpg" alt="" />
             </figure>
             <div class="money_detail">
                 <p>
