--- a/partials/portfolio.html
+++ b/partials/portfolio.html
@@ -5,37 +5,37 @@
         <div class="card_section">
             <div class="card">
                 <figure>
-                    <img src="img/Img1.jpg" alt="">
+                    <img src="../img/Img1.jpg" alt="">
                 </figure>
                 <p>Projrct 1</p>
             </div>
             <div class="card">
                 <figure>
-                    <img src="img/Img2.jpg" alt="">
+                    <img src="../img/Img2.jpg" alt="">
                 </figure>
                 <p>Projrct 1</p>
             </div>
             <div class="card">
                 <figure>
-                    <img src="img/Img3.jpg" alt="">
+                    <img src="../img/Img3.jpg" alt="">
                 </figure>
                 <p>Projrct 1</p>
             </div>
             <div class="card">
                 <figure>
-                    <img src="img/Img4.jpg" alt="">
+                    <img src="../img/Img4.jpg" alt="">
                 </figure>
                 <p>Projrct 1</p>
             </div>
             <div class="card">
                 <figure>
-                    <img src="img/Img5.jpg" alt="">
+                    <img src="../img/Img5.jpg" alt="">
                 </figure>
                 <p>Projrct 1</p>
             </div>
             <div class="card">
                 <figure>
-                    <img src="img/Img6.jpg" alt="">
+                    <img src="../img/Img6.jpg" alt="">
                 </figure>
                 <p>Projrct 1</p>
             </div>
