--- a/partials/portfolio.html
+++ b/partials/portfolio.html
@@ -7,37 +7,37 @@
                 <figure>
                     <img src="../img/Img1.jpg" alt="">
                 </figure>
-                <p>Projrct 1</p>
+                <p>Project 1</p>
             </div>
             <div class="card">
                 <figure>
                     <img src="../img/Img2.jpg" alt="">
                 </figure>
-                <p>Projrct 1</p>
+                <p>Project 2</p>
             </div>
             <div class="card">
                 <figure>
                     <img src="../img/Img3.jpg" alt="">
                 </figure>
-                <p>Projrct 1</p>
+                <p>Project 3</p>
             </div>
             <div class="card">
                 <figure>
                     <img src="../img/Img4.jpg" alt="">
                 </figure>
-                <p>Projrct 1</p>
+                <p>Project 4</p>
             </div>
             <div class="card">
                 <figure>
                     <img src="../img/Img5.jpg" alt="">
                 </figure>
-                <p>Projrct 1</p>
+                <p>Project 5</p>
             </div>
             <div class="card">
                 <figure>
                     <img src="../img/Img6.jpg" alt="">
                 </figure>
-                <p>Projrct 1</p>
+                <p>Project 6</p>
             </div>
         </div>
     </div>
